--- a/package.json
+++ b/package.json
@@ -15,5 +15,16 @@
     "url": "https://github.com/dhruuv/namaste-react/issues"
   },
   "homepage": "https://github.com/dhruuv/namaste-react#readme",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "parcel": "^2.12.0",
+    "process": "^0.11.10"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "browserslist":[
+    "last 2 versions"
+  ]
 }
